--- a/src/views/addAuthorForm.ejs
+++ b/src/views/addAuthorForm.ejs
@@ -72,7 +72,7 @@
                     </tr>
                       <tr>
                           <td>Image:<span class="required-star">*</span></td>
-                          <td><input type="file" name="file" id="" accept="image/*" required><br><span style="color: rgb(13, 32, 66);">example: /images/mt.jpg</span></td>
+                          <td><input type="file" name="file" id="" accept="image/*" required><br></td>
                       </tr>
                       
                      
