--- a/src/views/addForm.ejs
+++ b/src/views/addForm.ejs
@@ -54,7 +54,7 @@
                 <table cellpadding="10" cellspacing="0">
                     <tr>
                         <td><label for="title"> Title: </label><span class="required-star">*</span></td>
-                        <td><input type="text" name="title" id="" placeholder="Book title" required></td>
+                        <td><input type="text" name="title" placeholder="Book title" required></td>
                     </tr>
                     <tr>
                         <td>Author: <span class="required-star">*</span></td>
@@ -72,7 +72,7 @@
                   </tr>
                     <tr>
                         <td>Image:<span class="required-star">*</span></td>
-                        <td><input type="file" name="imageFile" id="" placeholder="Image path" required><br><span style="color: rgb(13, 32, 66);">example: /images/harrypotter.jpg</span></td>
+                        <td><input type="file" name="imageFile" id="" placeholder="Image path" required><br></td>
                     </tr>
                     
                    
