--- a/src/views/book.ejs
+++ b/src/views/book.ejs
@@ -45,11 +45,11 @@
                                   
                                 <div class="jumbotron jumbotron-fluid">
                                     <div class="media">
-                                        <img src="<%=book.image%>" class=" img-book" alt="APj" width="150px" >
+                                        <img src="<%=imagePath%><%=book.Image%>" class=" img-book" alt="APj" width="150px" >
                                         <div class="media-body">
-                                            <h1 class="mt-0"><%=book.title%></h1>
-                                            <h5> <span class="label label-default"><%=book.author %></span><strong><span class="badge badge-secondary"><%=book.genre%> </span></strong></h5>
-                                            <%=book.description %>  <br><br>
+                                            <h1 class="mt-0"><%=book.Title%></h1>
+                                            <h5> <span class="label label-default"><%=book.Author %></span><strong><span class="badge badge-secondary"><%=book.Genre%> </span></strong></h5>
+                                            <%=book.Description %>  <br><br>
                                             <h5>
                                                 <small><a href="./" class="text-muted">Back</a></small>
                                                 </h5>
