--- a/src/views/signup.ejs
+++ b/src/views/signup.ejs
@@ -108,8 +108,8 @@
                             <td>Postal Address: </td>
                             <td><textarea name="address" id="address" cols="50" rows="3" placeholder="Your address" ></textarea></td>
                         </tr>
-                        <tr ><td colspan="2"><input type="checkbox" name="terms" id="terms"  onchange="document.getElementById('submit').disabled = !this.checked"> I have read and accept the <a href="#" class="text-dark">BookStack Privacy Policy</a> </td></tr>                     
-                        <tr><td></td><td><input type="submit" name="submit" id="submit" value="Register" class="btn btn-info" disabled></td></tr>
+                        <tr ><td colspan="2"><input type="checkbox" name="terms" id="terms"  > I have read and accept the <a href="#" class="text-dark">BookStack Privacy Policy</a> </td></tr>                     
+                        <tr><td></td><td><input type="submit" name="submit" id="submit" value="Register" class="btn btn-info" ></td></tr>
                     </table>
             
 
