removed unwanted elemets from code and folders

--- a/src/views/signup.ejs
+++ b/src/views/signup.ejs
@@ -87,7 +87,7 @@
                         </tr>
                         <tr>
                             <td>Contact Number:<span class="required-star">*</span></td>
-                            <td><input type="tel" name="contactNumber" id="" maxlength="10" minlength="10" placeholder="Phone number" required></td>
+                            <td><input type="tel" name="contactNumber" id="" maxlength="10" minlength="10" placeholder="Phone number" required pattern="[0-9]+"></td>
                         </tr>
                          <tr>
                             <td>Gender:<span class="required-star">*</span></td>
