--- a/src/views/editAuthor.ejs
+++ b/src/views/editAuthor.ejs
@@ -28,7 +28,7 @@
 	<body>
       <header> 
           <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-              <a href="/" class="navbar-brand mb-0 h1 ">BookStack</a>
+              <a href="/home" class="navbar-brand mb-0 h1 ">BookStack</a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
               </button>
